# supermetrics-cli

./: .covignore  .env.example  .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  go.mod  go.sum  openapi-spec.yaml  pyproject.toml
.github/: release.yml
.github/workflows/: aikido-scan.yml  auto-release.yml  ci.yml  release.yml  spec-sync.yml
cmd/: cmd_test.go  completion.go  configure.go  help.go  help_test.go  login.go  man.go  profile.go  root.go  version.go
cmd/supermetrics/: main.go
docs/: examples.md  release-automation.md
internal/auth/: auth.go  auth_test.go  oauth.go  oauth_test.go
internal/buildcfg/: buildcfg.go
internal/config/: config.go  config_test.go
internal/exitcode/: exitcode.go  exitcode_test.go
internal/httpclient/: client.go  client_test.go  integration_test.go  middleware.go  middleware_test.go  retry.go  retry_test.go
internal/output/: csv.go  csv_test.go  fields.go  fields_test.go  json.go  json_test.go  output.go  output_test.go  table.go  table_test.go
internal/update/: selfupdate.go  selfupdate_test.go  updatecheck.go  updatecheck_test.go
scripts/: command-mapping.yaml  generate_commands.py  go_types.py  naming.py  register_generator.py  resource_generator.py  spec_parser.py  test_generate_commands.py
